--- a/MainWindow_Catalog.html
+++ b/MainWindow_Catalog.html
@@ -15,53 +15,13 @@
 		</div>
 	</header>
 	<main class="main">
-		<div class="sort-by">
-		  <button class="sort-by-button">Жанры</button>
-		  <select id="sort-select">
-			<option value="horror">Ужасы</option>
-			<option value="comedy">Комедии</option>
-			<option value="comedy">Драма</option>
-			<option value="comedy">Приключения</option>
-			<option value="comedy">Датектив</option>
-			<option value="comedy">Боевик</option>
-		  </select>
+
+		<div class="form-container">
+			<img src="https://picsum.photos/200/150?random=1">
+			<h3>Фильм 1</h3>
+			<p>Описание фильма</p>
+			<button class="watch-button" onclick="window.location.href='PlayerWindow.html'">Смотреть</button>
 		</div>
-
-			<div class="form-container">
-		<img src="https://picsum.photos/200/150?random=1">
-		<h3>Форма 1</h3>
-		<p>Описание формы 1</p>
-		<button class="watch-button" onclick="window.location.href='PlayerWindow.html'">Смотреть</button>
-	</div>
-
-	<div class="form-container">
-		<img src="https://picsum.photos/200/150?random=2">
-		<h3>Форма 2</h3>
-		<p>Описание формы 2</p>
-		<button class="watch-button" onclick="window.location.href='PlayerWindow.html'">Смотреть</button>
-	</div>
-
-	<div class="form-container">
-		<img src="https://picsum.photos/200/150?random=3">
-		<h3>Форма 3</h3>
-		<p>Описание формы 3</p>
-		<button class="watch-button" onclick="window.location.href='PlayerWindow.html'">Смотреть</button>
-	</div>
-
-	<div class="form-container">
-		<img src="https://picsum.photos/200/150?random=4">
-		<h3>Форма 4</h3>
-		<p>Описание формы 4</p>
-		<button class="watch-button" onclick="window.location.href='PlayerWindow.html'">Смотреть</button>
-	</div>
-
-	<div class="form-container">
-		<img src="https://picsum.photos/200/150?random=5">
-		<h3>Форма 5</h3>
-		<p>Описание формы 5</p>
-		<button class="watch-button" onclick="window.location.href='PlayerWindow.html'">Смотреть</button>
-	</div>
-
 	</main>
 
 	<script src="MainWindow_Catalog.js"></script>
